--- a/scss/_editor-sandwich.scss
+++ b/scss/_editor-sandwich.scss
@@ -7,7 +7,7 @@
  */
 body#tinymce.wp-editor .sortable-placeholder {
 	display: block;
-	height: 30px;
+	height: 20px;
 	width: auto;
 	background: rgba(108, 122, 137, .25);
 	border-radius: 3px;
